# iso20022

./: .gitignore  DATA_DICTIONARY.md  LICENSE  NOTICE  PKG_README.md  README.md  RELEASE.md  SECURITY.md  admi.004.001.02_20250725_164223.xml  cli_test_pacs.008.xml  fedwire_message_generator.py  fedwire_outgoing_test.txt  fedwire_payload_parser.py  generate_sample_payment_file.py  generate_sample_payment_status_request.py  generated_admi004.xml  incoming_wire.xml  incoming_wire_output.json  message_structure_identifier.py  output.xml  output_pacs028.xml  pacs.008.001.008_2025_1_output.json  pyproject.toml  requirements.txt  run_local.py  run_webapp.py  sample_admi004_payload.json  setup.py  standalone_test.py  test_output.xml  validate_xml.py
docs/: code_generation.md  pacs008.md
dough/iso20022/: __init__.py  fedwire.py
dough/iso20022/bah/: __init__.py
dough/iso20022/common/: __init__.py  customer.py
dough/iso20022/pacs/: __init__.py  pacs002.py  pacs008.py  pacs028.py
iso20022gen/: README.md  __init__.py  cli.py  code_generator.py  config.py  output.xml  sample_usage.py  simplified_test.py  test_models.py
iso20022gen/models/: __init__.py  apphdr.py  fedwire.py  helpers.py  xml_converter.py
iso20022gen/models/bah/: __init__.py  apphdr.py
iso20022gen/models/common/: __init__.py  customer.py  payment.py
iso20022gen/models/head/: __init__.py  apphdr.py
iso20022gen/models/pacs/: __init__.py  pacs002.py  pacs008.py  pacs028.py
iso20022gen/schemas/: README.md
mb_iso20022/: README.md  __init__.py  fedwire.py
mb_iso20022/bah/: __init__.py
mb_iso20022/common/: __init__.py  account.py  customer.py  payment.py
mb_iso20022/pacs/: __init__.py  pacs002.py  pacs008.py  pacs028.py
miso20022/: README.md  __init__.py  cli.py  fednow.py  fedwire.py
miso20022/admi/: admi004.py
miso20022/bah/: __init__.py  apphdr.py
miso20022/common/: __init__.py  customer.py
miso20022/pacs/: __init__.py  pacs002.py  pacs008.py  pacs028.py
sample_files/: pacs.002_PaymentAck.xml  pacs.008.001.008_2025_1.xml  pacs.028_PaymentStatusRequest.xml  sample_pacs028_payload.json  sample_payload.json  sample_payment.json
tests/: README.md  test_cli.py  test_code_generator.py  test_fedwire.py
webapp/: app.py  parser.py
webapp/static/css/: custom.css
webapp/templates/: index.html
