[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iso20022gen"
version = "0.1.0"
description = "ISO 20022 Message Generator for Financial Messaging"
readme = "README.md"
authors = [
    {name = "Vamsi Krishna", email = "vamsi.krishna@mbanq.com"},
    {name = "Sai Vatsavai", email = "sai.vatsavai@mbanq.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["iso20022", "financial", "messaging", "banking", "fedwire"]
dependencies = [
    "xmlschema>=1.9.0",
    "python-dotenv>=0.19.0",
    "xmltodict>=0.13.0",
    "setuptools~=58.0.4"
]
requires-python = ">=3.7"


[project.urls]
"Homepage" = "https://github.com/mbanq/iso20022gen"
"Bug Tracker" = "https://github.com/mbanq/iso20022gen/issues"

[project.scripts]
iso20022gen = "iso20022gen.cli:main"

[tool.setuptools]
packages = ["iso20022gen"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true